Normalize css, add some classes.

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Change me!</title>
+<link href="css/normalize.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,500,300&subset=cyrillic-ext,vietnamese,latin-ext,latin,cyrillic,greek-ext,greek' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <script type="text/javascript" src="js/react.js"></script>
