--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,6 +3,7 @@
 <head>
 <title>Change me!</title>
 <link href="css/normalize.css" rel="stylesheet" type="text/css">
+<link href="css/fontello.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,500,300&subset=cyrillic-ext,vietnamese,latin-ext,latin,cyrillic,greek-ext,greek' rel='stylesheet' type='text/css'>
 </head>
