--- a/extension/options.html
+++ b/extension/options.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head><title>My Test Extension Options</title></head>
-<body>
+  <head>
+    <title>My Test Extension Options</title>
+    <style>
+      body: { padding: 10px; }
+    </style>
+  </head>
 
-Favorite color:
-<select id="color">
-  <option value="red">red</option>
-  <option value="green">green</option>
-  <option value="blue">blue</option>
-  <option value="yellow">yellow</option>
-</select>
+  <body>
+    Favorite color:
+    <select id="color">
+      <option value="red">red</option>
+      <option value="green">green</option>
+      <option value="blue">blue</option>
+      <option value="yellow">yellow</option>
+    </select>
 
-<label>
-  <input type="checkbox" id="like">
-  I like colors.
-</label>
+    <label>
+      <input type="checkbox" id="like">
+      I like colors.
+    </label>
 
-<div id="status"></div>
-<button id="save">Save</button>
+    <div id="status"></div>
+    <button id="save">Save</button>
 
-</body>
+    <script src="options.js"></script>
+  </body>
 </html>
