--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Change me!</title>
-<link href="css/normalize.css" rel="stylesheet" type="text/css">
-<link href="css/fontello.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,500,300&subset=cyrillic-ext,vietnamese,latin-ext,latin,cyrillic,greek-ext,greek' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<script type="text/javascript" src="js/react.js"></script>
-<script type="text/javascript" src="js/deps/goog/base.js"></script>
-<script type="text/javascript" src="js/dict_chrome.js"></script>
-<script type="text/javascript" src="js/require.js" ></script>
-</body>
+  <head>
+    <title>Smart Translate</title>
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/fontello.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,500,300&subset=cyrillic-ext,vietnamese,latin-ext,latin,cyrillic,greek-ext,greek' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <script type="text/javascript" src="js/react.js"></script>
+    <script type="text/javascript" src="js/deps/goog/base.js"></script>
+    <script type="text/javascript" src="js/dict_chrome.js"></script>
+    <script type="text/javascript" src="js/require.js" ></script>
+  </body>
 </html>
