--- a/extension/options.html
+++ b/extension/options.html
@@ -12,6 +12,7 @@
     <script src="js/selectize.min.js"></script>
     <script src="js/react.js"></script>
     <script src="js/deps/goog/base.js"></script>
+    <script src="js/locale_codes.js"></script>
     <script src="js/dict_chrome.js"></script>
     <script src="js/require_options.js"></script>
   </body>
