Add production build.

--- a/extension/options.html
+++ b/extension/options.html
@@ -10,10 +10,9 @@
   <body>
     <script src="js/jquery.min.js"></script>
     <script src="js/selectize.min.js"></script>
-    <script src="js/react.js"></script>
     <script src="js/deps/goog/base.js"></script>
-    <script src="js/locale_codes.js"></script>
     <script src="js/dict_chrome.js"></script>
     <script src="js/require_options.js"></script>
+    <script src="js/run_options.js"></script>
   </body>
 </html>
