--- a/extension/popup_test.html
+++ b/extension/popup_test.html
@@ -8,9 +8,9 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,500,300&subset=cyrillic-ext,vietnamese,latin-ext,latin,cyrillic,greek-ext,greek' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <script type="text/javascript" src="js/react.js"></script>
-    <script type="text/javascript" src="js/deps/goog/base.js"></script>
-    <script type="text/javascript" src="js/dict_chrome.js"></script>
-    <script type="text/javascript" src="js/require.js" ></script>
+    <script src="js/deps/goog/base.js"></script>
+    <script src="js/dict_chrome.js"></script>
+    <script src="js/require_popup.js" ></script>
+    <script src="js/run_popup.js"></script>
   </body>
 </html>
